[gd_scene load_steps=15 format=2]

[ext_resource path="res://EnemyBody.gd" type="Script" id=1]
[ext_resource path="res://Simple explosion/simpleExplosion07.png" type="Texture" id=2]
[ext_resource path="res://Simple explosion/simpleExplosion06.png" type="Texture" id=3]
[ext_resource path="res://Simple explosion/simpleExplosion05.png" type="Texture" id=4]
[ext_resource path="res://enemyBlue1.png" type="Texture" id=5]
[ext_resource path="res://Simple explosion/simpleExplosion01.png" type="Texture" id=6]
[ext_resource path="res://Simple explosion/simpleExplosion04.png" type="Texture" id=7]
[ext_resource path="res://Simple explosion/simpleExplosion08.png" type="Texture" id=8]
[ext_resource path="res://Simple explosion/simpleExplosion02.png" type="Texture" id=9]
[ext_resource path="res://Simple explosion/simpleExplosion03.png" type="Texture" id=10]
[ext_resource path="res://Simple explosion/simpleExplosion00.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 8 ) ],
"loop": false,
"name": "boom",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.5151, 41.1046 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40.7125, 46.729 )

[node name="EnemyBody" type="RigidBody2D"]
position = Vector2( 7.48187, 13.1676 )
collision_layer = 3
collision_mask = 2
script = ExtResource( 1 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 37.8408, 35.2358 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 37.8408, 35.2358 )
frames = SubResource( 1 )
animation = "boom"
speed_scale = 3.0

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 35.7356, 34.1832 )
shape = SubResource( 2 )

[node name="EnemyBodyArea" type="Area2D" parent="."]

[node name="EnemyBodyAreaCollision" type="CollisionShape2D" parent="EnemyBodyArea"]
position = Vector2( 37.7262, 36.3438 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_ExplosionSprite_animation_finished"]
[connection signal="area_entered" from="EnemyBodyArea" to="." method="_on_EnemyBodyArea_area_entered"]
