[gd_scene load_steps=13 format=2]

[ext_resource path="res://ship.png" type="Texture" id=1]
[ext_resource path="res://ShipBody.gd" type="Script" id=2]
[ext_resource path="res://bullet.png" type="Texture" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://bad_guy.png" type="Texture" id=5]
[ext_resource path="res://EnemyBody.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 91.9474, 35.1634 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 99.1884, 39.1385 )

[sub_resource type="CircleShape2D" id=2]
radius = 15.2315

[sub_resource type="CircleShape2D" id=7]
radius = 20.9176

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.2493, 27.4072 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 39.8698, 41.8116 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="ShipBody" type="RigidBody2D" parent="."]
position = Vector2( 26, 35 )
applied_torque = 2500.0
script = ExtResource( 2 )

[node name="ShipCollisionShape" type="CollisionShape2D" parent="ShipBody"]
position = Vector2( 101.424, 38.1302 )
shape = SubResource( 4 )
one_way_collision_margin = 2.0

[node name="ShipSprite" type="Sprite" parent="ShipBody"]
position = Vector2( 99, 36 )
texture = ExtResource( 1 )

[node name="ShipBodyArea" type="Area2D" parent="ShipBody"]

[node name="ShipBodyAreaCollision" type="CollisionShape2D" parent="ShipBody/ShipBodyArea"]
position = Vector2( 100.831, 36.5651 )
shape = SubResource( 5 )

[node name="BulletBody" type="RigidBody2D" parent="."]
position = Vector2( 630, 17 )
collision_layer = 2
collision_mask = 2
gravity_scale = 0.5

[node name="BulletSprite" type="Sprite" parent="BulletBody"]
position = Vector2( 1, 4 )
texture = ExtResource( 3 )

[node name="BulletCollisionShape" type="CollisionShape2D" parent="BulletBody"]
shape = SubResource( 2 )

[node name="BulletBodyArea" type="Area2D" parent="BulletBody"]

[node name="BulletBodyAreaCollision" type="CollisionShape2D" parent="BulletBody/BulletBodyArea"]
position = Vector2( 1.10803, 2.21606 )
shape = SubResource( 7 )

[node name="EnemyBody" type="RigidBody2D" parent="."]
collision_layer = 3
collision_mask = 2
script = ExtResource( 7 )

[node name="EnemySprite" type="Sprite" parent="EnemyBody"]
position = Vector2( 1093.63, 157.341 )
texture = ExtResource( 5 )

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="EnemyBody"]
position = Vector2( 1093.63, 157.341 )
shape = SubResource( 3 )

[node name="EnemyBodyArea" type="Area2D" parent="EnemyBody"]

[node name="EnemyBodyAreaCollision" type="CollisionShape2D" parent="EnemyBody/EnemyBodyArea"]
position = Vector2( 1091.41, 158.449 )
shape = SubResource( 6 )

[node name="EnemyTimer" type="Timer" parent="."]
[connection signal="area_entered" from="EnemyBody/EnemyBodyArea" to="." method="_on_EnemyBodyArea_area_entered"]
[connection signal="area_entered" from="EnemyBody/EnemyBodyArea" to="EnemyBody" method="_on_EnemyBodyArea_area_entered"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
